feat(jans-config-api): endpoint for agama flows
