# jans-config-api/docs/jans-config-api-swagger.yaml
@@ -31,6 +31,7 @@ tags:
   - name: OAuth - OpenID Connect - Clients
   - name: OAuth - UMA Resources
   - name: OAuth - Scopes
+  - name: Configuration – Agama Flow
   - name: Statistics - User
   - name: Health - Check
   - name: Server Stats
@@ -2355,6 +2356,104 @@ paths:
           description: Internal Server Error
       security:
         - oauth2: [https://jans.io/oauth/config/scopes.write]
+
+  /jans-config-api/api/v1/config/agama:
+    post:
+      summary: Create a new agama flow.
+      description: Create a new agama flow.
+      operationId: post-agama-flow
+      tags:
+        - Configuration – Agama Flow
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AgamaFlow'
+      responses:
+        '201':
+          description: CREATED
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AgamaFlow'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+      security:
+        - oauth2: [https://jans.io/oauth/config/agama.write]
+  /jans-config-api/api/v1/config/agama/{qname}:
+    parameters:
+      - schema:
+          type: string
+        name: qname
+        in: path
+        description: flow qname.
+        required: true
+    get:
+      summary: Gets an agama flow based on Qname.
+      description: Gets an agama flow based on Qname.
+      operationId: get-agama-flow
+      tags:
+        - Configuration – Agama Flow
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/AgamaFlow'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+      security:
+        - oauth2: [https://jans.io/oauth/config/agama.readonly]
+    put:
+      summary: Updates an agama flow based on Qname.
+      description: Updates an agama based on Qname.
+      operationId: put-agama-flow
+      tags:
+        - Configuration – Agama Flow
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AgamaFlow'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AgamaFlow'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalServerError'
+      security:
+        - oauth2: [https://jans.io/oauth/config/agama.write]	
+    delete:
+      summary: Deletes an agama flow based on Qname.
+      description: Deletes an agama flow based on Qname.
+      operationId: delete-agama-flow
+      tags:
+        - Configuration – Agama Flow
+      responses:
+        '204':
+          description: No Content
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
+        '500':
+          description: Internal Server Error
+      security:
+        - oauth2: [https://jans.io/oauth/config/agama.delete]
+		
   /jans-config-api/api/v1/stat:
     get:
       summary: Provides server with basic statistic.
@@ -6924,4 +7023,69 @@ components:
           type: object
           additionalProperties:
             type: string
-		
+
+    FlowMetadata:
+      title: Agama Flow meta data
+      description: Object for Agama Flow meta data.
+      type: object
+      properties:
+        funcName:
+          description: name of the function.
+          type: string
+        inputs:
+          description: Agama Flow inputs.
+          type: array
+          items:
+            type: string
+        timeout:
+          description: flow timeout value.
+          type: integer
+          format: int64
+          default: 0
+        displayName:
+          description: Flow name
+          type: string
+        author:
+          description: Author of the agama flow
+          type: string
+        timestamp:
+          description: flow update time.
+          type: string
+          format: date
+			
+			
+    AgamaFlow:
+      title: Agama Flow object
+      description: Object for Agama Flow.
+      type: object
+      properties:
+        dn:
+          description: Domain name
+          type: string
+        QName:
+          description: Agama Flow queue name.
+          type: string
+        transHash:
+          description: Agama Flow custom message.
+          type: string
+        revision:
+          description: Update revision number of the script.
+          type: integer
+          format: int64
+          default: 0
+        enabled:
+          description: boolean value indicating if script enabled.
+          type: boolean
+          default: false
+        metadata:
+          description: Agama Flow metadata.
+          $ref: '#/components/schemas/FlowMetadata'
+        source:
+          description: Agama Flow source.
+          type: string
+        transpiled:
+          description: Agama Flow translate compiler.
+          type: string
+        codeError:
+          type: string
+          description: Possible errors assosiated with the flow.
